# FDPS-extended

./: .envrc  .gitignore  CHANGES.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_GUIDE.md  flake.nix  quickstart.sh
.cache/clangd/index/: MT.hpp.E95FFF140EEE547C.idx  comm_info.hpp.4C53631EE114D43E.idx  comm_table.hpp.FBD5C2D2C543A488.idx  domain_info.hpp.3728D6C5FF36361E.idx  fdps_output.hpp.C54C5A1D7855BA13.idx  fdps_unit_system.hpp.423542D6C5F4A16A.idx  interaction_list.hpp.27655BF51846A796.idx  key_type.hpp.99405715BAE406EA.idx  main.cpp.94DD290F485CC5A3.idx  matrix2.hpp.5BAE78C608D9533C.idx  matrix_sym2.hpp.04A0BB2BCA73D512.idx  matrix_sym3.hpp.9BBF3BA419A746A2.idx  memory_pool.hpp.6DDFBEABAAB940E3.idx  morton_key3.hpp.E8769B782EAB67F2.idx  orthotope2.hpp.8DF9BD6109D49E06.idx  orthotope2i.hpp.4ACA2FF4A6161621.idx  orthotope3.hpp.D91A56B3CD8A5186.idx  orthotope3i.hpp.996D5E2CCE3B3941.idx  particle_simulator.hpp.6D1BD239AE648518.idx  particle_system.hpp.5059898EBB1AE71F.idx  ps_defs.hpp.5A383AB8FEAFB302.idx  ps_macro_defs.h.18CDEA9FECA12DF4.idx  ps_types.hpp.9737024023322684.idx  reallocatable_array.hpp.B5975F0C299466C6.idx  sort.hpp.A94EE73068AE9BF3.idx  stack.hpp.AA7DF058D8A0A022.idx  time_profile.hpp.C3B54DBD43F33AD0.idx  timer.hpp.5218BD38D9CF3BE4.idx  tree.hpp.8B4C335144410B96.idx  tree_for_force.hpp.89C822BAE6C68436.idx  tree_for_force_deprecated.hpp.EB91B212C37994CC.idx  tree_for_force_impl.hpp.C0B7D7BC7A00CCA2.idx  tree_for_force_impl_exlet.hpp.FC9034F479BA5046.idx  tree_for_force_impl_force.hpp.9B419504E6B5DB41.idx  tree_for_force_impl_high_level.hpp.D8691D20990BA7C7.idx  tree_for_force_impl_make_ipg.hpp.711A5143AFCC9EA5.idx  tree_for_force_impl_make_jplist.hpp.8E1C0647DBDAE1F3.idx  tree_for_force_impl_make_tree.hpp.8A8C71DEE985D164.idx  tree_for_force_impl_pmm.hpp.27CB0F63F4AF254B.idx  tree_for_force_impl_set_particle_local_tree.hpp.8F662AFB6132528D.idx  (+17 more)
.github/instructions/: codeing_rule.instructions.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
analysis/: read_fdps_csv.py
analysis/fdps-animator/: README.md  __init__.py  examples.py  fdps_animator.py  main.py  pyproject.toml
docs/: RESEARCH_PROJECT_STRUCTURE.md  UNIT_SYSTEM_AND_OUTPUT.md
research/: README.md
research/00-templates/basic-sph-template/: Makefile  NOTES.md
research/00-templates/gdisph-implementation/: GDISPH_IMPLEMENTATION_NOTES.md  PROJECT_README_TEMPLATE.md  README.md  RESULTS_SUMMARY.md
sample/c++/nbody/: Makefile  force_gpu_cuda.cu  force_gpu_cuda.hpp  kernel_epep.pikg  nbody.cpp  (+1 more)
sample/c++/nbody+sph/: Makefile  main.cpp
sample/c++/sph/: CMakeLists.txt  Makefile  README.md  build.sh  conanfile.txt  main.cpp
sample/c++/sph/result/: 0000.txt  0010.txt  0020.txt
src/: CHANGELOG  fdps_output.hpp  fdps_unit_system.hpp  particle_system.hpp  tree_for_force.hpp  tree_for_force_deprecated.hpp
src/particle_mesh/: Makefile  param.h
src/particle_mesh_multipole/: LICENSE.txt  M2L_engine.hpp  NOTICE  cell.hpp  cutoff.hpp  fftw3-mpi_incl.h  fftw3_incl.h  fmm.hpp  green_function.hpp  particle_mesh_multipole_class.hpp  particle_mesh_multipole_defs.hpp  particle_mesh_utils.hpp
tests/: CMakeLists.txt  unit_system_gtest.cpp  unit_system_test.cpp
(+56 files in other folders)
